clusters/rainbow/public/foundry-vtt-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: foundry-auth
  namespace: public
spec:
  basicAuth:
    secret: foundry-conn-info
---

apiVersion: v1
kind: Service
metadata:
  name: foundry-vtt
  namespace: public
spec:
  type: ExternalName
  externalName: magenta.rainbow.tuckerthomas.com
  ports:
    - port: 30000
      protocol: TCP
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-ingress
  namespace: public
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vtt.tuckerthomas.com`)
      kind: Rule
      middlewares:
        - name: anubis-auth
          namespace: public
        - name: foundry-auth
          namespace: public
      services:
        - kind: Service
          name: foundry-vtt
          namespace: public
          port: 30000
  tls:
    secretName: public-cert-prod
    domains:
      - main: vtt.tuckerthomas.com
---

apiVersion: v1
kind: Service
metadata:
  name: foundry-vtt2
  namespace: public
spec:
  type: ExternalName
  externalName: orange.rainbow.tuckerthomas.com
  ports:
    - port: 30000
      protocol: TCP
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-ingress2
  namespace: public
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vtt2.tuckerthomas.com`)
      kind: Rule
      middlewares:
        - name: anubis-auth
          namespace: public
        - name: foundry-auth
          namespace: public
      services:
        - kind: Service
          name: foundry-vtt2
          namespace: public
          port: 30000
  tls:
    secretName: public-cert-prod
    domains:
      - main: vtt2.tuckerthomas.com
