clusters/rainbow/public/headscale-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: public
spec:
  type: ExternalName
  externalName: ruby.rainbow.tuckerthomas.com
  ports:
    - port: 30001
      protocol: TCP
    - port: 30001
      protocol: UDP
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale-ingress
  namespace: public
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vpn.tuckerthomas.com`)
      kind: Rule
#      middlewares:
#        - name: anubis-auth
#          namespace: public
      services:
        - kind: Service
          name: headscale
          namespace: public
          port: 30001
  tls:
    secretName: public-cert-prod
    domains:
      - main: vpn.tuckerthomas.com
