clusters/rainbow/public/jellyfin-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-auth
  namespace: public
spec:
  basicAuth:
    secret: jellyfin-conn-info
---

apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: public
spec:
  type: ExternalName
  externalName: orange.rainbow.tuckerthomas.com
  ports:
    - port: 8096
      protocol: TCP
---

#apiVersion: v1
#kind: Service
#metadata:
#  name: jellyfin
#  namespace: public
#spec:
#  selector:
#    app.kubernetes.io/name: jellyfin
#  ports:
#    - name: http
#      protocol: TCP
#      port: 8096
#  externalIPs:
#    - 192.168.1.52
#---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: public
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.tuckerthomas.com`)
      kind: Rule
      middlewares:
        - name: anubis-auth
          namespace: public
        #- name: jellyfin-auth
        #  namespace: public
      services:
        - kind: Service
          name: jellyfin
          namespace: public
          port: 8096
  tls:
    secretName: public-cert-prod
    domains:
      - main: jellyfin.tuckerthomas.com
